[tool.poetry]
name = "pyStrich"
version = "0.11"
description = "PyStrich is a Python module to generate 1D and 2D barcodes (Code 39, Code 128, DataMatrix, QRCode and EAN13). Forked from huBarcode."
authors = [
    "Michael Mulqueen <mike@method-b.uk>"
    # Previous authors not listed here. Refer to git log.
]
maintainers = [
    "Michael Mulqueen <mike@method-b.uk>"
]
readme = "README.md"
license = "Apache-2.0"
include = [
    "pystrich/fonts/*.pil",
    "pystrich/fonts/*.pbm",
    "pystrich/qrcode/qrcode_data/*.dat",
    "pystrich/py.typed"
]
homepage = "https://github.com/mmulqueen/pyStrich"
repository = "https://github.com/mmulqueen/pyStrich"
documentation = "https://www.method-b.uk/pyStrich/docs/"
keywords = [
    "barcode",
    "qrcode",
    "datamatrix",
    "ean13",
    "code39",
    "code128"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Office/Business"
]


[tool.poetry.dependencies]
python = "^3.10"
pillow = [
    {version = ">=10.3", python = "<3.11"},
    {version = ">=12.2", python = ">=3.11"},
]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
mypy = "^1.13"
ezdxf = "^1.3"
fonttools = "^4.55"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^8.1"
furo = "^2024.8.6"
sphinx-copybutton = "^0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = ["pystrich"]
python_version = "3.10"
exclude = [
    "(^|/)test_[^/]+\\.py$",
    "(^|/)generate_test\\.py$",
    "(^|/)conftest\\.py$",
]

# Internals not yet typed; enable case by case as they're cleaned up.
[[tool.mypy.overrides]]
module = [
    "pystrich.code128.encoding",
    "pystrich.code128.textencoder",
    "pystrich.code39.encoding",
    "pystrich.code39.textencoder",
    "pystrich.datamatrix.placement",
    "pystrich.datamatrix.reedsolomon",
    "pystrich.datamatrix.textencoder",
    "pystrich.ean13.encoding",
    "pystrich.fonts",
    "pystrich.qrcode.isodata",
    "pystrich.qrcode.textencoder",
]
ignore_errors = true
